# clang-unit-cpp

./: CMakeLists.txt  LoopConvert.cpp  README.md  TODO_automatically_generated.cpp  in-tree_work  package-lock.json  run.sh  test.cpp
in-tree_work/: LoopConvert.cpp  run.sh  test.cpp  tinytest.cpp
src/: ClangUnit.cpp  ClangUnit.h  ClangUnit.hpp  ClangUnitChild.cpp  ClangUnitChild.hpp  ClangUnitConcept.cpp  ClangUnitConcept.hpp  ClangUnitCtor.cpp  ClangUnitCtor.hpp  ClassField.cpp  ClassField.hpp  FunctionalParameter.cpp  FunctionalParameter.hpp  InputParser.cpp  InputParser.hpp  ParsedClass.cpp  ParsedClass.hpp  ParsedFunction.cpp  ParsedFunction.hpp  ParsedMethod.cpp  ParsedMethod.hpp  RandomValueByType.cpp  RandomValueByType.hpp  TestCase.cpp  TestCase.hpp  TestCasesForParsedInput.cpp  TestCasesForParsedInput.hpp  TestsWriter.cpp  TestsWriter.hpp  main.cpp  run_tests.sh  test.cpp
src/interfaces/: GeneratesIncludes.cpp  GeneratesIncludes.hpp  HandlesOutputFiles.cpp  HandlesOutputFiles.hpp  Printable.cpp  Printable.hpp  SharedGenericTestGen.cpp  SharedGenericTestGen.hpp  TestsFunctions.cpp  TestsFunctions.hpp  TestsMethods.cpp  TestsMethods.hpp  TestsTemplates.cpp  TestsTemplates.hpp
test/: CMakeLists.txt  TODO_automatically_generated.cpp  automatically_generated.cpp  cunit_demo1_filled.cpp  cunit_demo2.cpp  cunit_demo2_filled.cpp  cunit_demo3.cpp  cunit_demo4.cpp  cunit_demo5_filled.cpp  cunit_test.cpp  cunit_testcopy.cpp  cunitchild_test.cpp  cunitchild_testcopy.cpp  demo1.cpp  demo2.cpp  demo3.cpp  demo4.cpp  demo5.cpp  test.cpp
tinytest/: dump_tinytest.sh  tinytest.cpp
